make git ingore any node_modules folder or .env file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 #dependencies
-./chat-assistant-ui/node_modules
-./chat-assistant-api/node_modules
+/**/node_modules
 
 #misc
-./chat-assistant-api/.env
+/**/.env
